package Game;

public class playermoney {


    public static void main(String[] args) {
        Player[] players = new Player[4];
        int playermostmoney = 0;

        for (int i = 0; i < players.length; i++) {
            players[i] = new Player("playertest" + i);
        }
        for (int index = 0; index < players.length; index++) {
            if(index+1 > players.length){
                break;
            }


            }


        }



    }
}


