@startuml

skinparam classAttributeIconSize 0

  namespace Game {
    class Game.Account {
        - balance : int
        - startbal : int
        + Account()
        + getBalance()
        + newBalance()
        + setBalance()
    }
  }
  namespace Game {
    class Game.Board {
        ~ boardSize : int
        ~ fieldDatabase : String
        ~ myFields : Field[]
        + Board()
        + generateBoard()
        + getMyFields()
        - loadFromTXT()
    }
  }

  namespace Game {
    class Game.Chance {
        - id : int
        - name : String
        - text : String
        + Chance()
        + getId()
        + getName()
        + getText()
        + setId()
        + setName()
        + toString()
    }
  }

  namespace Game {
    class Game.Die {
        - faceAmount : int
        - value : int
        + Die()
        + getFaceAmount()
        + getValue()
        + roll()
        + setFaceAmount()
        + setValue()
        + toString()
    }
  }

  namespace Game {
    class Game.Field {
        ~ color : String
        ~ name : String
        ~ price : int
        + Field()
        + getColor()
        + getName()
        + getOwner()
        + getPrice()
        + getfType()
        + setOwner()
    }
  }

  namespace Game {
    enum fieldtype {
      CHANCE
      FREEPARKING
      GOJAIL
      JAIL
      PROPERTY
      START
    }
  }

  namespace Game {
    class Game.Player {
        ~ name : String
        ~ playernumber : int
        {static} - counter : int
        + Player()
        + getAc()
        + getName()
        + getPlayernumber()
        + setAc()
        + setName()
        + setPlayernumber()
    }
  }

  namespace Game {
    class Game.Rafflecup {
        - cup : Die[]
        + Rafflecup()
        + configure()
        + getCup()
        + roll()
        + rollar()
        + sum()
    }
  }

  namespace Game {
    class Game.Settings {
        {static} + BOARD_SIZE : int
        {static} + DIE_FACES : int
        {static} + DIE_NUMBER : int
        {static} + FIELD_DATABASE : String
        {static} + GO_RESTROOM_MONEY : int
        {static} + GO_SPOT_MONEY : int
        {static} + MAX_PLAYERS : int
        {static} + MIN_PLAYERS : int
        {static} + PAY_SPOT_MONEY : int
        {static} + STARTING_MONEY : int
        {static} + WINDOW_HEIGHT : int
        {static} + WINDOW_WIDTH : int
        - Settings()
    }
  }

  namespace Game {
    class Game.TXTReader {
        - txtToLoad : String
        + TXTReader()
        + readTXTFile()
    }
  }
namespace Game {
class Game.Playermoney

}
  namespace GUI {
      class GUI.ColorConverter {
          {static} - myColor : Color
          {static} + ConvertColor()
      }
    }

    namespace GUI {
      class GUI.GUIMain {
          ~ gridCountLine : int
          - Board : JPanel
          - fieldText : JLabel[]
          - gridCount : int
          - gridSize : int
          - height : int
          - limitingFactor : int
          - myFields : Field[]
          - startingPointX : int
          - startingPointY : int
          - width : int
          + GUIMain()
      }
    }

  Game.Field o-- "1" Game.Player : owner

  Game.Player o-- Game.Account : ac
    Game.Field --|> Game.Board
    Game.Settings --|> Game.Board
Game.Die <--- Game.Rafflecup
Game.fieldtype --|> "1" Game.Field
Game.Settings ---> GUI.GUIMain
Game.Chance --|> Game.fieldtype
Game.TXTReader --o Game.Board

@enduml